<?xml version="1.0" encoding="utf-8"?>
<com.yijie.cn.sdk.demo.view.ChargeView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:paddingTop="10dp" >

    <LinearLayout
        android:id="@+id/sf_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/sf_account_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yijie_changeaccount"
            android:src="@drawable/portrait" />

        <TextView
            android:id="@+id/sf_accountname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/bg_name"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/yijie_accountname"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/sf_changeaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/logout"
            android:contentDescription="@string/yijie_changeaccount"
            android:src="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sf_chargebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/sf_account"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/coin"
                android:contentDescription="@string/daibi" />

            <ImageView
                android:id="@+id/sf_recharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:background="@drawable/recharge"
                android:contentDescription="@string/yijie_recharge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/coin"
                android:contentDescription="@string/daibi" />

            <ImageView
                android:id="@+id/sf_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:background="@drawable/pay"
                android:contentDescription="@string/yijiepay" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/coin"
                android:contentDescription="@string/daibi" />

            <ImageView
                android:id="@+id/sf_pay100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:background="@drawable/pay100g"
                android:contentDescription="@string/yijie_recharge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/coin"
                android:contentDescription="@string/daibi" />

            <ImageView
                android:id="@+id/sf_recharge100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:background="@drawable/recharge100g"
                android:contentDescription="@string/yijie_recharge" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/coin"
                android:contentDescription="kupai" />

            <TextView
                android:id="@+id/sf_extendpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:text="@string/yijie_extend_pay_title"  />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/footerlogo"
        android:contentDescription="@string/yijie_accountname" />

</com.yijie.cn.sdk.demo.view.ChargeView>